right part of the header alignment fixed

--- a/src/app/components/header/menus/order/order.scss
+++ b/src/app/components/header/menus/order/order.scss
@@ -12,8 +12,10 @@
         }
         a{
             line-height: 15px !important;
-            padding-left: 10px !important;
-            padding-right: 25px !important;  
+            // padding-left: 10px !important;
+            padding-left: 30px;
+            margin-right: -20px;
+            // padding-right: 25px !important;  
             &.last-anchor{
                 padding-right: 24px !important;
             }
