--- a/src/app/components/header/menus/profile/profile.scss
+++ b/src/app/components/header/menus/profile/profile.scss
@@ -1,5 +1,6 @@
 .profile-menu{
-    padding-right: 10px;
+    // padding-right: 10px;
+    margin-right: -30px;
     li{
         a{
             color: $color_extreme_two
